--- a/responzivnost/index1.html
+++ b/responzivnost/index1.html
@@ -5,41 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style1.css">
+    <script src="https://kit.fontawesome.com/162c2f36ee.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main">
         <div class="nav">
-            <div class="left leftnav">
-                <span style="font-weight: 1000; translate: -150px 20px;">MindHub</span>
+            <div class="leftNav">
+                <span style="font-weight: 1000; padding-left: 20px;">MindHub</span>
             </div>
-            <div class="right">
-                <span>Home</span>
-                <span>About</span>
-                <span>Benefits</span>
-                <span>Pricing</span>
-                <span>Subscribe</span>
+            <div class="rightNav">
+                <span class="spanNav">Home</span>
+                <span class="spanNav">About</span>
+                <span class="spanNav">Benefits</span>
+                <span class="spanNav">Pricing</span>
+                <span class="spanNav">Contacts</span>
+                <span class="burgerIcon">=
+                    <div class="dropdown">
+                        <span style="font-size: 20px; width: 100%; height: 50px;">Services</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;""n>Blog</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;"">About</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;"">Contact</span>
+                    </div>
+                </span>
             </div>
         </div>
         <div class="header">
-            <div class="left">
-               <h1 style="line-height: 40px; translate: -1.5cm;">Your Daily Dose Of Mindfullnes</h1>
-               <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium nihil sit mollitia quo vel similique eos dolore ipsum exercitationem voluptas incidunt dolorem ab alias neque, debitis a unde rerum omnis.</span>
-               <div style="translate: -6cm; margin-top: 20px;" class="btncontainer">
-                   <button style="background-color: lightgreen; color: white;">Start Meditating</button>
-                   <button style="border-color: lightgreen; color: lightgreen;">Why Meditate?</button>
-               </div>
+            <div class="leftHead">
+                <h1>Your Daily Dose Of Mindfullnes</h1>
+                <span style="line-height: 30px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut velit aperiam esse! Blanditiis amet autem nisi quam consequatur facilis unde sequi assumenda dolor dicta! Alias nobis reprehenderit adipisci aliquid non?</span><br>
+                <button style="translate: 0 30px; background-color: rgb(16, 194, 16); color: white; border: none;">Start Meditating</button>
+                <button class="bottom-btn" style="translate: 0 30px; border-color: rgb(16, 194, 16); border-style: solid; color: rgb(16, 194, 16);">Why Meditate</button>
             </div>
             <div class="rightHead">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFW7h1tpfka7d9dKX1kai6_KKHpw_KSWXguRsGe8s&s" alt="">
+                <img src="https://media.istockphoto.com/id/1139912908/vector/woman-meditating-in-nature-and-leaves-concept-illustration-for-yoga-meditation-relax.jpg?s=612x612&w=0&k=20&c=c2hvyhWDX1hfjnfgJcghUQoB9xrEawehcB5XIwjtIqI=" alt="">
             </div>
         </div>
         <div class="about">
             <div class="leftAbout">
-                <img src="https://i.etsystatic.com/27903509/r/il/3c40a0/3024421055/il_fullxfull.3024421055_sjzl.jpg" alt="">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/006/792/345/small/mental-health-blooming-human-brain-line-icon-mind-concept-love-life-new-page-illustration-free-vector.jpg" alt="">
             </div>
             <div class="rightAbout">
-                <h3>About</h3>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatibus quasi quisquam consectetur reiciendis iste odit dolorem perferendis nobis at, assumenda quas perspiciatis maxime vero qui. Tempora aliquam nihil nam.</span>
+                <h3>About Us</h3>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, voluptas aliquid, impedit cupiditate voluptatum, recusandae illo enim tempora deserunt commodi a dolorum nam numquam eius. Accusantium magnam nobis laboriosam soluta, nam ab repellat omnis ullam adipisci ea sequi autem quia.</span>
+            </div>
+        </div>
+        <div class="footer">
+            <h3>Benefits</h3>
+            <div class="row">
+                <div class="card card-top">
+                    <div class="headerCard"><i style="font-size: 50px; color: rgb(16, 194, 16);" class="fa-solid fa-leaf"></i></div>
+                    <div class="bodyCard">
+                        <h4>Self Awareness</h4>
+                    </div>
+                    <div class="footer">
+                        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus possimus iste doloremque velit id eaque. Dolore aperiam nulla, officiis ipsa nemo facilis, exercitationem, commodi hic quis mollitia iure? Totam, dolorem.</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="headerCard"><i style="font-size: 50px; color: rgb(16, 194, 16);" class="fa-solid fa-leaf"></i></div>
+                    <div class="bodyCard">
+                        <h4>Self Awareness</h4>
+                    </div>
+                    <div class="footer">
+                        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus possimus iste doloremque velit id eaque. Dolore aperiam nulla, officiis ipsa nemo facilis, exercitationem, commodi hic quis mollitia iure? Totam, dolorem.</span>
+                    </div>
+                </div>
+                <div class="card card-bottom">
+                    <div class="headerCard"><i style="font-size: 50px; color: rgb(16, 194, 16);" class="fa-solid fa-leaf"></i></div>
+                    <div class="bodyCard">
+                        <h4>Self Awareness</h4>
+                    </div>
+                    <div class="footer">
+                        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus possimus iste doloremque velit id eaque. Dolore aperiam nulla, officiis ipsa nemo facilis, exercitationem, commodi hic quis mollitia iure? Totam, dolorem.</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
