--- a/responzivnost/index1.html
+++ b/responzivnost/index1.html
@@ -22,9 +22,9 @@
                 <span class="burgerIcon">=
                     <div class="dropdown">
                         <span style="font-size: 20px; width: 100%; height: 50px;">Services</span>
-                        <span style="font-size: 20px; width: 100%; height: 50px;""n>Blog</span>
-                        <span style="font-size: 20px; width: 100%; height: 50px;"">About</span>
-                        <span style="font-size: 20px; width: 100%; height: 50px;"">Contact</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;">Blog</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;">About</span>
+                        <span style="font-size: 20px; width: 100%; height: 50px;">Contact</span>
                     </div>
                 </span>
             </div>
